Modernized app and fixed spacing

--- a/portfolio.css
+++ b/portfolio.css
@@ -27,9 +27,7 @@ p{
 
 hr{
     margin-top: 20px;
-    border: 0;
-    height: 0;
-    box-shadow: 0 0 10px 1px black;
+    color: rgb(194, 191, 182);
 }
 
 .title{
@@ -87,7 +85,9 @@ a:visited{
 
 /*----------------------------------------------------------------------------------------------------------------------------*/
 /*------------------------------------------------Contact Info----------------------------------------------------------------*/
-
+.contact{
+    margin-top: 25px;
+}
 
 
 .portrait{
@@ -137,6 +137,9 @@ a:visited{
 }
 /*--------------------------------------------------------------------------------------------------------*/
 /*--------------------------------------------------------Skills------------------------------------------*/
+.skillInformation{
+    margin-top: 25px;
+}
 
 .jsLogo, .bioLogo{
     margin-top: 25px;
@@ -149,6 +152,10 @@ a:visited{
 
 /*-------------------------------------------------------------------------------------------------------*/
 /*--------------------------------------------------------Bio--------------------------------------------*/
+.bio{
+    margin-top: 25px;
+}
+
 .bioTitle{
     text-align: center;
     margin-bottom: 10px;
@@ -173,10 +180,10 @@ a:visited{
 .projectTitle{
     font-size: 30px;
     text-align: center;
-    margin-top: 10px;
-    margin-bottom: 20px;
+    margin-top: 20px;
+    margin-bottom: 30px;
     font-family: 'Aclonica', sans-serif;
-    background-image: linear-gradient( rgb(194, 191, 182) , white) 
+    background: rgb(194, 191, 182); 
 }
 
 .appDescript{
@@ -188,6 +195,7 @@ a:visited{
     height: 125px;
     width: 150px;
     margin-top: 25px;
+    margin-bottom: 25px;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -242,9 +250,11 @@ a:visited{
         height: 120px;
         margin-left: 17%;
         margin-right: 5%;
+        margin-top: 8px;
     }
 
     .projectTitle, .skillsTitle{
+        margin-top: 25px;
         font-size: 35px;
         text-align: center;
     }
@@ -254,24 +264,26 @@ a:visited{
         justify-content: center;
     }
 
-
-    .jsLogo, .bioLogo{
+    .bioLogo{
         height: 120px;
         width: 120px;
-        margin-left: 12%;
+        margin-left: 17%;
         margin-right: 5%;
     }
 
     .jsLogo{
         float:right;
-        margin-right: 12%;
-        margin-left: 5%;
+        height: 120px;
+        width: 120px;
+        margin-left: 12%;
+        margin-right: 17%;
+        margin-top: 10px;
     }
 
     .skillsTitle{
         display: flex;
         justify-content: center;
-        width: 67%;
+        width: 55%;
     }
 
     .skillSection{
@@ -295,6 +307,6 @@ a:visited{
 
 @media only screen and (min-width:1440px){
     .skillsTitle{
-        width: 74%;
+        width: 62%;
     }
 }
